# assetui

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
migrations/: 20260616231920_create_quotes.sql  20260617000000_index_quotes_name_as_of.sql  20260620180000_dedupe_quotes_name_as_of.sql  20260627000000_rename_name_to_ticker.sql  20260629000000_add_ticker_symbol.sql  20260629000001_index_all_quote_fields.sql  20260629000002_create_watchlist_table.sql
src/: fetch.rs  lib.rs  main.rs  models.rs  run.rs  search.rs  sort.rs  stream.rs
src/cli/: input.rs  mod.rs  output.rs
src/db/: connection.rs  mod.rs  quotes.rs  watchlist.rs
src/tui/: app.rs  draw.rs  mod.rs  run.rs  theme.rs
src/tui/app/: tasks.rs
tests/: db_quotes.rs  db_watchlist.rs  fetch_queries.rs  functional.rs  run_pipeline.rs  tui_workflows.rs
