[package]
name = "assetui"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = [
  "rt",
  "macros",
  "sync",
  "time",
  "process",
] }
yfinance-rs = { version = "0.9.0", features = ["stream"] }
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "chrono",
  "migrate",
] }
dotenvy = "0.15.7"
chrono = "0.4.45"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1.4.0"
comfy-table = "7.2.2"
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
ratatui-notifications = "0.1.0"
clap = { version = "4.6.1", features = ["derive"] }
